<resources>
    <array name="calibration">
        <item name="acc">@string/acc</item>
        <item name="gyr">@string/gyr</item>
        <item name="mag">@string/mag</item>
    </array>

    <string name="app_name">TSND121</string>
    <string name="title_activity_edit">Manage</string>
    <string name="title_activity_graph">Graph</string>


    <string name="connect">Connect</string>
    <string name="connected">Connected</string>
    <string name="disconnect">Disconnect</string>
    <string name="start_measure">Start Measure</string>
    <string name="stop_measure">Stop Measure</string>
    <string name="left_connect">Left</string>
    <string name="right_connect">Right</string>

    <string name="msg_connect_success">Connected</string>
    <string name="msg_connect_failed">Connection Failed</string>
    <string name="msg_failed">Failed</string>
    <string name="msg_need_bluetooth">Need Bluetooth!</string>
    <string name="msg_please_connect">Please Connect Sensor</string>
    <string name="msg_illegal_mac_address">Illegal Mac Address!</string>
    <string name="msg_success">Success</string>
    <string name="msg_start_calibration">Start Calibration</string>

    <string name="acc">Accelerometer</string>
    <string name="gyr">Gyrscope</string>
    <string name="mag">Magnetometer</string>
    <string name="axis_x">X</string>
    <string name="axis_y">Y</string>
    <string name="axis_z">Z</string>
    <string name="calibration">Calibration</string>
    <string name="gravity_direction">Gravity direction</string>

    <string name="manage_sensor">Manage Sensor</string>
    <string name="add_sensor">Add Sensor</string>
    <string name="add_sensor_name">Name</string>
    <string name="add_sensor_mac">MAC address</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="modify_sensor">Modify Sensor</string>
    <string name="sensor_info">Sensor Info</string>
    <string name="open_manage_alert">Stop connection to manage</string>
    <string name="save_csv">Save csv</string>
    <string name="from_paired_devices">From paired devices</string>
</resources>
