<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/manage_menu"
        android:title="@string/manage_sensor"
        android:icon="@drawable/ic_build"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/save_csv"
        android:title="@string/save_csv"
        android:checkable="true"
        app:showAsAction="never"/>
    <item
        android:title="@string/gravity_direction">
        <menu>
            <group
                android:checkableBehavior="single">
                <item
                    android:id="@+id/g_direction_x"
                    android:title="@string/axis_x"/>
                <item
                    android:id="@+id/g_direction_y"
                    android:title="@string/axis_y"/>
                <item
                    android:id="@+id/g_direction_z"
                    android:title="@string/axis_z"/>
            </group>
        </menu>
    </item>
</menu>