<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.paranoid.mao.tsnddemo.MainActivity"
    tools:layout_editor_absoluteY="81dp">


    <TextView
        android:id="@+id/connectLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:drawableStart="@drawable/selector_connect"
        android:drawablePadding="16dp"
        android:gravity="center"
        android:text="@string/left_connect"
        android:textAppearance="@style/TextAppearance.AppCompat.Button"
        app:layout_constraintBottom_toBottomOf="@+id/connectRight"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/connectRight" />

    <TextView
        android:id="@+id/connectRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:drawableStart="@drawable/selector_connect"
        android:drawablePadding="16dp"
        android:gravity="center"
        android:text="@string/right_connect"
        android:textAppearance="@style/TextAppearance.AppCompat.Button"
        app:layout_constraintBottom_toBottomOf="@+id/measureButton"
        app:layout_constraintStart_toEndOf="@+id/connectLeft"
        app:layout_constraintTop_toTopOf="@+id/measureButton" />

    <ImageView
        android:id="@+id/measureButton"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:src="@drawable/selector_measure"
        android:contentDescription="@string/start_measure"
        android:background="?android:selectableItemBackgroundBorderless"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/connectButton"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/connect"
        android:background="?android:selectableItemBackgroundBorderless"
        android:src="@drawable/ic_bluetooth_searching"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:alignmentMode="alignBounds"
        android:columnCount="4"
        android:columnOrderPreserved="false"
        android:rowCount="4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1" />

        <TextView
            style="@style/GridTextViewBold"
            android:layout_height="wrap_content"
            android:text="@string/axis_x" />

        <TextView
            style="@style/GridTextViewBold"
            android:layout_height="wrap_content"
            android:text="@string/axis_y" />

        <TextView
            style="@style/GridTextViewBold"
            android:layout_height="wrap_content"
            android:text="@string/axis_z" />

        <TextView
            style="@style/GridTextViewBold"
            android:layout_height="wrap_content"
            android:text="@string/acc" />

        <TextView
            android:id="@+id/tvAccX"
            style="@style/GridTextView"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tvAccY"
            style="@style/GridTextView"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tvAccZ"
            style="@style/GridTextView"
            android:layout_height="wrap_content" />

        <TextView
            style="@style/GridTextViewBold"
            android:layout_height="wrap_content"
            android:text="@string/gyro" />

        <TextView
            android:id="@+id/tvGyroX"
            style="@style/GridTextView"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tvGyroY"
            style="@style/GridTextView"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tvGyroZ"
            style="@style/GridTextView"
            android:layout_height="wrap_content" />

        <TextView
            style="@style/GridTextViewBold"
            android:layout_height="wrap_content"
            android:text="@string/Mag" />

        <TextView
            android:id="@+id/tvMagX"
            style="@style/GridTextView"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tvMagY"
            style="@style/GridTextView"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tvMagZ"
            style="@style/GridTextView"
            android:layout_height="wrap_content" />

    </GridLayout>

    <FrameLayout
        android:id="@+id/graphContainer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gridLayout">

    </FrameLayout>


</android.support.constraint.ConstraintLayout>
